fix responsive and overflow in wrapper

--- a/application/stylus/organisms/wrapper.styl
+++ b/application/stylus/organisms/wrapper.styl
@@ -4,6 +4,10 @@
   height: 100%
   .container
     position: relative
+    width: 90%
     max-width: container.width
     height: 100%
     margin: 0 auto
+
+.wrapper.bucketAll
+  overflow-y: scroll
